2009-12-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Image Syntax): mention convention for installing
	images for use by capable Info readers (i.e., Emacs Info).
	Suggested by Jose Marchesi.

2009-10-26  Roland Kaufmann  <roland.kaufmann@gmail.com>  (tiny change)

	* util/texi2dvi (max-iterations): new option.

2009-10-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Predefined Indices): insert @findex entries
	for the indexing commands (cindex, findex, etc.).
	From Kevin Ryde, 17 Oct 2009 10:03:14.

	* info/filesys.c (compress_suffixes): use gzip -d in preference to
	gunzip.  From Antonio Diaz Diaz, 22 Oct 2009 17:42:34.

2009-10-08  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (catcode_special): default to maybe,
	and only set to true for processing Texinfo, not LaTeX.
	Request from Kurt Hornik, also Debian bug #534458.

2009-09-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

        * build-aux/gendocs.sh: Fix copyright header to match GPLv3
        recommendation.

2009-09-04  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (munge_old_style_debian_options):
	malloc what we sprintf.
	From Matt McCutchen, http://savannah.gnu.org/bugs/?27376.

2009-08-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\rgbDarkRed, \rgbBlack): new macros, replacing
	\cmykDarkRed and \cmykBlack.  Change uses.  Said to print
	considerably better.
	From: Andrew Hawryluk, 12 Aug 2009 21:22:06.`,

2009-07-25  Oleg Katsitadze <olegkat@gmail.com>

	* doc/texinfo.tex (\commondummiesnofonts): Added \email.

2009-05-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\textdegree): output index sort string as `o',
	since that's how we output it in Info.  Suggested by Patrice.

2009-05-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (firstparagraphindent): mistaken
	mention of @paragraphindent.  Report from Dilyan Palauzov,
	10 May 2009 21:41:32.
	(@@-Command Summary): forgot @firstparagraphindent{}.
	* doc/refcard/txirefcard.tex: likewise.
